[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/BLKCHCRY.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 2 )
side = 10
tileMaxMana = 5

[node name="UI" type="Control" parent="."]
anchor_right = 0.727
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="ManaCount" type="Label" parent="UI/CanvasLayer"]
margin_right = 59.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Mana: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseIntegrity" type="Label" parent="UI/CanvasLayer"]
margin_top = 30.0
margin_right = 59.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Base Integrity: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="UI/CanvasLayer"]
margin_left = 950.0
margin_top = 10.0
margin_right = 1017.0
margin_bottom = 30.0
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerPurchaseToggle" type="CheckButton" parent="UI/CanvasLayer"]
margin_left = 903.363
margin_top = 40.3175
margin_right = 1021.36
margin_bottom = 80.3175
custom_fonts/font = SubResource( 2 )
text = "Tower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 510, 300 )
current = true
script = ExtResource( 1 )
panSpeed = 200
[connection signal="pressed" from="UI/CanvasLayer/EndTurn" to="UI" method="_on_EndTurn_pressed"]
[connection signal="toggled" from="UI/CanvasLayer/TowerPurchaseToggle" to="UI" method="_on_TowerPurchaseToggle_toggled"]
